car-controller/k8s/manifest.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
  namespace: jav-dev-k9q3p
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: pks-harbor-tst.agilesolutions.com/java-development-tools/frontend:latest
        imagePullPolicy: Always
        name: centos8
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        securityContext:
          runAsUser: 10000
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  name: frontend
  namespace: jav-dev-k9q3p
  resourceVersion: "478828"
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
  name: frontend
  namespace: jav-dev-k9q3p
  resourceVersion: "480769"
spec:
  rules:
  - host: jav-fe-k8spoc-dev.agilesolutions.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
